# explicit

./: CLAUDE.md  README.md  pyproject.example.toml  pyproject.toml
explicit/: __init__.py  cli_args.py  code_visitor.py  config.py  constructs.py  file_handlers.py  main.py  reporters.py  single_use.py
tests/: check_fixtures.py  test_assert.py  test_boolop.py  test_comprehensions.py  test_dict_get.py  test_filter.py  test_if.py  test_lambda.py  test_match.py  test_single_letter.py  test_single_use_func.py  test_single_use_var.py  test_ternary.py  test_while.py
