[project]
name = "explicit"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
explicit = "explicit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Enable isort rules for import sorting
select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.pyright]
exclude = ["tests"]
reportAny = false
reportImportCycles = false
